--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,7 @@
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "hol",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
